--- a/package.json
+++ b/package.json
@@ -42,7 +42,11 @@
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/typescript-estree": "^6.2.0",
+    "acorn": "^8.10.0",
+    "astring": "^1.8.6",
     "cross-env": "^7.0.3",
+    "estree-walker": "^3.0.3",
     "git-cliff": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
